[gd_scene load_steps=5 format=3 uid="uid://dv4bjs5sw1t3m"]

[ext_resource type="Script" uid="uid://c1lcipmvb5d26" path="res://main_menu.gd" id="1_7vrkn"]
[ext_resource type="Texture2D" uid="uid://dkqiprl7sd2er" path="res://assets/Vertical Game Background _ Premium Vector.jpeg" id="2_7vrkn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_7vrkn"]
texture = ExtResource("2_7vrkn")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhts7"]
bg_color = Color(1.0007857, 1.0007857, 1.0007857, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 5

[node name="main menu" type="Control"]
layout_mode = 3
anchor_left = 0.5
anchor_top = 0.328
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -311.0
offset_top = 111.45599
offset_right = 244.0
offset_bottom = 87.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vrkn")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -276.0
offset_top = -322.0
offset_right = 331.0
offset_bottom = 325.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_7vrkn")

[node name="Container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -205.5
offset_top = -125.25
offset_right = 205.5
offset_bottom = 125.25
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 11

[node name="Button" type="Button" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rhts7")
text = "START GAME"

[node name="Button2" type="Button" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rhts7")
text = "OPTIONS"

[node name="Button3" type="Button" parent="Container"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.0093103545, 0.0093103545, 0.0093103545, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_rhts7")
theme_override_styles/pressed = SubResource("StyleBoxFlat_rhts7")
text = "EXIT"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -270.5
offset_top = -212.5
offset_right = 264.5
offset_bottom = -153.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.012617188, 0.012617188, 0.012617188, 1)
theme_override_font_sizes/font_size = 43
text = "AMAZING WORLD OF FUN"
horizontal_alignment = 1
vertical_alignment = 1
structured_text_bidi_override_options = [null]

[connection signal="pressed" from="Container/Button" to="." method="_on_START_pressed"]
[connection signal="pressed" from="Container/Button2" to="." method="_on_OPTION_pressed"]
[connection signal="pressed" from="Container/Button3" to="." method="_on_EXIT_pressed"]
